Fix filters on iphone5

--- a/external/source/src/styles/mobile.css
+++ b/external/source/src/styles/mobile.css
@@ -40,6 +40,20 @@
 }
 
 @media (max-width: 420px) {
+  .filters__headline {
+    margin-top: 10px;
+  }
+
+  .filters__select {
+    height: 30px;
+    margin: 0;
+  }
+
+  .filters__input {
+    padding: 0 10px;
+    margin: 0;
+  }
+
   .track__line {
     padding-left: 5px;
   }
